# pyquation

./: .coveragerc  .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt  setup.py  test.deleteme.ipynb  tests.ipynb  todo.md
pyquation/: .equationModifiers.py.bak  CombinedEquation.py  Equation.py  Modifier.py  Variable.py  __init__.py  chemistryEquations.py  constants.py  demo.ipynb  mathEquations.py  namespaces.py  physicsEquations.py  solve.py  test.deleteme.ipynb  tests.py  waveEquations.py
pyquation.bak/: Dimension.ipynb  Equation.py  Namespace.py  Unit.py  electronicsEquations.py  logicEquations.py  namespaces.py
pyquation/physics/: variables.py
tests/: tests.ipynb  tests.py
